--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "fs-extra": "^8.1.0",
+    "inquirer": "^6.3.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "jest": "^24.8.0"
